<resources>
    <string name="auth_title">Авторизация</string>
    <string name="auth_without_enter">Запуск без авторизации</string>
    <string name="auth_enter">Войти</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_login">Логин</string>
    <string name="auth_remember">Запомнить</string>
    <string name="user_goods">Мои товары</string>
    <string name="need_auth">Требуется авторизация</string>
    <string name="auth_logout">Выход из аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="profile.hello">Здравствуйте, %s</string>

    <string name="nav.user_goods">Мои товары</string>
    <string name="nav.bonus">Бонус</string>
    <string name="nav.contacts">Контакты</string>
    <string name="nav.profile">Мой аккаунт</string>
    <string name="nav.notifications">Уведомления</string>
    <string name="nav.favorites">Избранное</string>
    <string name="nav.settings">Настройки</string>
    <string name="nav.support">Справка</string>
    <string name="nav.logout">Выход</string>

    <string name="error.network">Ошибка Интернет подключения</string>
    <string name="error.loading">Ошибка при загрузке</string>
    <string name="error.play">Невозможно воспроизвести видео</string>

    <string name="file_download">Скачать %s</string>
    <string name="file_open">Смотреть %s</string>
    <string name="file_read">Читать %s</string>
    <string name="file_info">Вес файла - %s МБ</string>
    <string name="file_progress">(%1$d из %2$d успешно) Скачиваем файл - %3$d%%</string>
    <string name="file_progress_complete">(%1$d из %2$d успешно) Скачивание завершено</string>
    <string name="error_format">Неподдерживаемый формат</string>
    <string name="text_bonus">Эксклюзивный бонус от Константина Шереметьева только для пользователей мобильного приложения. Прослушайте его прямо сейчас или сохраните для прослушивания оффлайн.</string>
    <string name="address">Адрес офиса: г. Москва, ул. Академика Королёва, д. 13, стр. 1, подъезд 5, этаж 8, офис 849 «Интеллектикс»</string>
    <string name="phone">Телефон: 8-800-555-04-84 (звонок по России бесплатный) +7 (495) 724-60-58 (для Москвы и звонков из-за рубежа)</string>
    <string name="email">E-mail: zakaz@sheremetev.info</string>
    <string name="grah">График работы офиса и телефонной службы поддержки: понедельник - пятница с 11:00 до 19:00</string>
    <string name="web">Сайт: https://www.sheremetev.info</string>
    <string name="file_download_all_mb">Скачать все - %d МБ</string>
    <string name="file_download_all_mb_f">Скачать все - %.2f МБ</string>
    <string name="file_download_all_gb">Скачать все - %.2f ГБ</string>
    <string name="file_download_all">Скачать все</string>
    <string name="name_bonus">Смартфон как инструмент успеха в современном мире.</string>
    <string name="clear_cache">Удалить все сохраненные файлы</string>
    <string name="cache_size_mb">Размер сохраненых файлов - %d МБ</string>
    <string name="cache_size_gb">Размер сохраненых файлов - %.2f ГБ</string>
    <string name="show_description">Просмотреть описание</string>
    <string name="description">Описание</string>
    <string name="lesson_messages">Сообщения</string>
    <string name="report_rejected">Отчет отклонен</string>
    <string name="report_approved">Отчен принят</string>
    <string name="report_hint">Ваш отчет о выполнении задания пишите ниже:</string>
    <string name="report">Отчет</string>
    <string name="report_await_check">Ожидается проверка</string>
    <string name="delete_marker">Удалить закладку</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="marker_text">Воспроизвести файл %s c %s</string>
    <string name="file_save_to">Сохранено в %s</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="recovery_password">Восстановить пароль</string>
    <string name="auth_email">E-mail</string>
    <string name="forgot_hint">Введите e-mail, который вы использовали для оформления заказов в в магазине Интеллектикс</string>
    <string name="recovery_password_success">Письмо с новым паролем отправлено на %s</string>
    <string name="rating_title">Оцените приложение</string>
    <string name="rating_description">Если вам нравится Интеллектикс, не могли бы его оценить? Это займет лишь минуту. Благодарим за поддержку!</string>
    <string name="rating_now">Оценить Интеллектикс</string>
    <string name="rating_denied">Нет, спасибо</string>
    <string name="rating_later">Напомнить позже</string>
    <string name="rating_done">Спасибо за оценку!</string>



    <string name="channel_name">media _intellectics</string>
    <string name="channel_description">intellectics_play</string>
    <string name="cards">Активная карта</string>
    <string name="cards_error">Произошла ошибка при загрузке</string>
    <string name="cards_empty">Не доступно</string>
    <string name="cards_remove_error">Ошибка деактивации карты</string>
    <string name="favorite.empty_start">Для добавления товара\nв избранное нажмите</string>
    <string name="favorite.empty_end">справа вверху, находясь\nвнутри товара</string>
    <string name="cards_remove">Отключить</string>
    <string name="cards_remove_cancel">Отмена</string>
    <string name="dialog_delete_favorite">Потвердите удаление из избраного</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="cards_remove_hint">Вы уверены, что хотите отключить привязку карты?\nВключить обратно её можно будет только из личного кабинета в браузере</string>
    <string name="payment_request_confirm">Оплата будет произведена с привязанной карты %s.</string>
    <string name="payment_confirm">Оплатить</string>
    <string name="payment_cancel">Отмена</string>
</resources>
