<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_title"
        android:textColor="#333333"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rating_description"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <Button
        android:id="@+id/btnRateNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="32dp"
        android:text="@string/rating_now"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnRateLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="32dp"
        android:text="@string/rating_later"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRateNow"/>

    <Button
        android:id="@+id/btnRateDenied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="32dp"
        android:text="@string/rating_denied"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRateLater"/>

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:max="5"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rating_done"
        android:textColor="#333333"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbRating"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>