<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c8dde8"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="2"
        android:text="@string/marker_text"
        android:textColor="#275978"
        android:textSize="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_blue_button"
        android:gravity="center"
        android:minHeight="35dp"
        android:minWidth="50dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/yes"
        android:textColor="#ffffff"
        android:textSize="11dp"
        app:layout_constraintRight_toLeftOf="@+id/btnNo"
        app:layout_constraintTop_toBottomOf="@id/tvText" />

    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_blue_button"
        android:gravity="center"
        android:minHeight="35dp"
        android:minWidth="50dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/no"
        android:textColor="#ffffff"
        android:textSize="11dp"
        app:layout_constraintRight_toLeftOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/tvText" />

    <TextView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_blue_button"
        android:gravity="center"
        android:minHeight="35dp"
        android:minWidth="60dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/delete_marker"
        android:textColor="#ffffff"
        android:textSize="11dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvText" />

</android.support.constraint.ConstraintLayout>