<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_messages"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/messagesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/tvReportStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        tools:text="Отчен отклонен"/>

    <RelativeLayout
        android:id="@+id/sendReportContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvAddReportHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorTitleBlackText"
            android:text="@string/report_hint"/>

        <TextView
            android:id="@+id/tvReportAutoSaveDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorInfoText"
            android:layout_below="@+id/tvAddReportHint"
            tools:text="Сохранено (7.4.2018 13:59:22)"/>

        <EditText
            android:id="@+id/etReportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReportAutoSaveDate"
            android:layout_toLeftOf="@+id/btnReportSend"
            android:hint="@string/report"/>

        <ImageButton
            android:id="@+id/btnReportSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvReportAutoSaveDate"
            android:background="@null"
            android:paddingTop="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp"
            app:srcCompat="@drawable/ic_send"/>

    </RelativeLayout>

</LinearLayout>